# mol-track

./: CONTRIBUTING.md  README.md  additions.json  mtcli.py  pyproject.toml
app/: main.py  models.py
app/crud/: __init__.py  additions.py  assay_data.py  batches.py  compounds.py  properties.py
app/services/auth/: api_key_service.py  auth_dependents.py  utils.py
app/services/properties/: property_service.py  property_validator.py
app/services/registrars/: base_registrar.py  batch_registrar.py  compound_registrar.py
app/services/search/: field_resolver.py  operators.py  query_builder.py
app/services/search/utils/: aggregation_operators.py  helper_functions.py
app/setup/: database.py
app/utils/: enums.py
client/: __init__.py  client.md  client.py
client/cli/: additions.py  admin.py  assays.py  auth.py  batches.py  compounds.py  database.py  directory.py  schema.py  search.py  shared.py
client/config/: __init__.py  settings.py
client/utils/: api_helpers.py  data_ingest.py  display.py  file_utils.py  mapping_utils.py
data/black/: assay_results_mapping.json  batches_mapping.json  compounds_schema.json
db/: moltrack_indexes.sql  schema.sql  setup.sql
docs/: api-design.md  api.md  architecture.md  features.md  validators.md
tests/: conftest.py  test_additions.py  test_assay.py  test_batch_registrar.py  test_chemistry_utils.py  test_compound_registrar.py  test_compounds.py  test_search.py  test_settings.py  test_validators.py
tests/utils/: test_base_registrar.py  test_mixins.py
