[project]
name = "mol-track"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.12",
    "httpx>=0.28.1",
    "orjson>=3.11.1",
    "pandas>=2.3.0",
    "psycopg2-binary>=2.9.10",
    "pydantic==2.10.6",
    "pytest>=8.3.5",
    "pytest-asyncio>=0.26.0",
    "python-dateutil>=2.9.0.post0",
    "python-dotenv>=1.1.0",
    "python-multipart>=0.0.20",
    "pyyaml==6.0.2",
    "rdkit>=2025.3.1",
    "sqlalchemy>=2.0.40",
    "sqlmodel>=0.0.24",
    "uvicorn>=0.34.2",
    "pyarrow>=16.1.0",
    "common-expression-language",
    "typer>=0.16.0",
    "requests>=2.32.4",
    "pydantic-settings",
    "keyring>=25.7.0",
]

[tool.ruff]
line-length = 120

[tool.ruff.per-file-ignores]
"app/crud/__init__.py" = ["F401"]
